<package>
  <name>plen_msgs</name>
  <version>1.0.0</version>
  <description>
    plen_msgs provides messages for PLEN robots.
  </description>
  <maintainer email="helpline@plen.jp">PLEN Project Company Inc.</maintainer>
  <license>BSD</license>

  <url type="website">http://plen.jp</url>
  <url type="repository">https://github.com/plenprojectcompany/plen-Firmware_ROS</url>

  <author>Tatsuroh SAKAGUCHI</author>
  <author>Mitsuhiro YABU</author>
  <author>Yugo KAJIWARA</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
